5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1637_2446.log
== SUBMITION (2019-04-15 22:45:42) 
-- CODE:
senha = int(input("senha"))
d1 = senha//100000
d2 = (senha//10000)%10
d3 = (senha//1000)%10
d4 = (senha//100)%10
d5 = (senha//10)%10
d6 = senha%10
if((d2+d4+d6)%(d1+d3+d5)! = 0):
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.231843
-- ERROR:
  File "/home/codebench/codes/1637/2446/main.py", line 8
    if((d2+d4+d6)%(d1+d3+d5)! = 0):
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:46:05) 
-- CODE:
senha = int(input("senha:"))
d1 = senha//100000
d2 = (senha//10000)%10
d3 = (senha//1000)%10
d4 = (senha//100)%10
d5 = (senha//10)%10
d6 = senha%10
if((d2+d4+d6)%(d1+d3+d5)! = 0):
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.156581
-- ERROR:
  File "/home/codebench/codes/1637/2446/main.py", line 8
    if((d2+d4+d6)%(d1+d3+d5)! = 0):
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:47:23) 
-- CODE:
senha = int(input("senha:"))
d1 = senha//100000
d2 = (senha//10000)%10
d3 = (senha//1000)%10
d4 = (senha//100)%10
d5 = (senha//10)%10
d6 = senha%10
if((d2+d4+d6)%(d1+d3+d5)! = 0):
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.143838
-- ERROR:
  File "/home/codebench/codes/1637/2446/main.py", line 8
    if((d2+d4+d6)%(d1+d3+d5)! = 0):
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:48:43) 
-- CODE:
senha = int(input("senha:"))
d1 = senha//100000
d2 = (senha//10000)%10
d3 = (senha//1000)%10
d4 = (senha//100)%10
d5 = (senha//10)%10
d6 = senha%10
if((d2+d4+d6)%(d1+d3+d5)! = 0 ):
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.123663
-- ERROR:
  File "/home/codebench/codes/1637/2446/main.py", line 8
    if((d2+d4+d6)%(d1+d3+d5)! = 0 ):
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:48:44) 
-- CODE:
senha = int(input("senha:"))
d1 = senha//100000
d2 = (senha//10000)%10
d3 = (senha//1000)%10
d4 = (senha//100)%10
d5 = (senha//10)%10
d6 = senha%10
if((d2+d4+d6)%(d1+d3+d5)! = 0 ):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 8
    if((d2+d4+d6)%(d1+d3+d5)! = 0 ):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:49:32) 
-- CODE:
senha = int(input("senha:"))
d1 = senha//100000
d2 = (senha//10000)%10
d3 = (senha//1000)%10
d4 = (senha//100)%10
d5 = (senha//10)%10
d6 = senha%10
if((d2+d4+d6)%(d1+d3+d5)! =0 ):
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.183616
-- ERROR:
  File "/home/codebench/codes/1637/2446/main.py", line 8
    if((d2+d4+d6)%(d1+d3+d5)! =0 ):
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:49:47) 
-- CODE:
senha = int(input("senha:"))
d1 = senha//100000
d2 = (senha//10000)%10
d3 = (senha//1000)%10
d4 = (senha//100)%10
d5 = (senha//10)%10
d6 = senha%10
if((d2+d4+d6)%(d1+d3+d5)! =0 ):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 8
    if((d2+d4+d6)%(d1+d3+d5)! =0 ):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:49:52) 
-- CODE:
senha = int(input("senha:"))
d1 = senha//100000
d2 = (senha//10000)%10
d3 = (senha//1000)%10
d4 = (senha//100)%10
d5 = (senha//10)%10
d6 = senha%10
if((d2+d4+d6)%(d1+d3+d5)! =0 ):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 8
    if((d2+d4+d6)%(d1+d3+d5)! =0 ):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:51:28) 
-- CODE:
senha = int(input("senha:"))
d1 = senha//100000
d2 = (senha//10000)%10
d3 = (senha//1000)%10
d4 = (senha//100)%10
d5 = (senha//10)%10
d6 = senha%10
if((d2+d4+d6)%(d1+d3+d5)!= 0 ):
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.148208
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
